--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,10 @@ ul li a:hover{
     overflow: hidden;
 }
 
-
+img:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    }
 
 /*boxmodel*/
 
